feat: integrate sphinx

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,4 @@ export POLYGONSCAN_ZKEVM_TESTNET_API_KEY=""
 export SEPOLIA_ETHERSCAN_API_KEY=""
 export SEPOLIA_RPC_URL=""
 export POLYGON_ZKEVM_TESTNET_RPC_URL=""
+export SPHINX_API_KEY=""
