--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,6 @@
   branch = "v1"
 	path = lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
+[submodule "lib/sphinx"]
+	path = lib/sphinx
+	url = https://github.com/sphinx-labs/sphinx
