--- a/foundry.toml
+++ b/foundry.toml
@@ -16,6 +16,9 @@
   solc = "0.8.19"
   src = "src"
   test = "test"
+  build_info = true
+  extra_output = ['storageLayout']
+  fs_permissions = [{ access = "read", path = "./out"}, { access = "read-write", path = "./cache"}]
 
 [profile.ci]
   fuzz = { runs = 10_000 }
